[package]
name = "orko"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]

[dependencies]
sass-rs = "0.2"
templar = { path = "../templar" }
docopt = "0.8"
filetime = "0.1"
staticfile = "0.4.0"
iron = "0.5.1"
mount = "0.3.0"
notify = "4.0"
colored = "1.5"
pad = "0.1"

[lib]
doc = false

[[bin]]
name = "orko"
doc = false
